Fix page layout grid so that the header is not constrained to a fixed height

--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -1,7 +1,7 @@
 body {
   display: grid;
   grid-template-columns: minmax(12em, 1fr) 4fr;
-  grid-template-rows: 8em 1fr;
+  grid-template-rows: auto 1fr;
   grid-gap: $padding * 2;
   grid-template-areas:
     "header   header"
