--- a/src/styles/base/_font.scss
+++ b/src/styles/base/_font.scss
@@ -26,7 +26,7 @@
 
 @font-face {
   font-family: "Clear Sans";
-  src: url("../fonts/ClearSans-RegularItalic.woff") format("woff");
+  src: url("../fonts/ClearSans-Italic.woff") format("woff");
   font-weight: 400;
   font-style: italic;
 }
