Add a grid lines toggle button

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -13,8 +13,12 @@ html {
   color: $text-color;
 }
 
-body {
-  // @include grid-lines;
+body.show-grid {
+  @include grid-lines;
+}
+
+.hidden {
+  display: none;
 }
 
 header,
