Add a border to the bottom of the header

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -24,6 +24,11 @@ footer {
   padding: $padding;
 }
 
+header {
+  border-bottom: $border;
+  margin-bottom: -1px;
+}
+
 a {
   color: $link-color;
   text-decoration: none;
