--- a/src/styles/components/_panel.scss
+++ b/src/styles/components/_panel.scss
@@ -20,6 +20,12 @@
 
 .panel__footer {
   grid-area: footer;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: auto;
+  grid-gap: $padding;
+  justify-content: start;
+  justify-items: start;
 }
 
 
