--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -47,6 +47,22 @@ label {
   letter-spacing: 0.01em;
 }
 
+ol, ul {
+  padding-left: $padding;
+}
+
+ol {
+  list-style-type: decimal;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+li {
+  font: $p;
+}
+
 section {
   padding-bottom: $padding;
 
