--- a/src/styles/components/_tooltip.scss
+++ b/src/styles/components/_tooltip.scss
@@ -10,6 +10,7 @@
     font: $label;
     letter-spacing: 0.01em;
     line-height: 1;
+    white-space: nowrap;
     color: #fff;
     padding: ($quarter-padding * 0.25) $quarter-padding ($quarter-padding * 0.75);
     background-color: $black;
