--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -26,7 +26,7 @@ footer {
 
 header {
   border-bottom: $border;
-  margin-bottom: -1px;
+  margin: -1px 0;
 }
 
 a {
@@ -78,6 +78,8 @@ code {
   padding: ($quarter-padding / 2) $quarter-padding;
   border-radius: $border-radius;
   font-family: monospace;
+  font-size: 87.5%;
+  line-height: 1;
   white-space: pre;
-  vertical-align: top;
+  vertical-align: middle;
 }
