Add a list group with content

--- a/src/styles/base/_forms.scss
+++ b/src/styles/base/_forms.scss
@@ -146,7 +146,7 @@ $help-text-height: $label-height;
 
 .form-group {
   position: relative;
-  margin-bottom: $padding;
+  margin-bottom: $padding + $half-padding;
 
   &--info {
     .form-group__input {
