--- a/src/styles/base/_button.scss
+++ b/src/styles/base/_button.scss
@@ -11,7 +11,7 @@ $small-button-height: $button-height * 0.75;
 // ---------------------------------- \\
 
 .button {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   position: relative;
   height: $button-height;
