--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -53,10 +53,12 @@ ol, ul {
 
 ol {
   list-style-type: decimal;
+  margin-bottom: 1rem;
 }
 
 ul {
   list-style-type: disc;
+  margin-bottom: 1rem;
 }
 
 li {
