--- a/src/styles/base/_forms.scss
+++ b/src/styles/base/_forms.scss
@@ -139,6 +139,15 @@ $help-text-height: $label-height;
   grid-area: text;
 }
 
+.form-group--select {
+  &:before,
+  &:after {
+    grid-area: input-right-icon;
+    align-self: center;
+    justify-self: center;
+  }
+}
+
 
 // ---------------------------------- \\
 //              DISPLAY               \\
@@ -200,6 +209,7 @@ $help-text-height: $label-height;
 }
 
 .form-group__input {
+  appearance: none;
   display: block;
   padding: 0 $half-padding;
   line-height: $input-height;
@@ -242,6 +252,7 @@ $help-text-height: $label-height;
 
   &.disabled,
   &[disabled] {
+    color: $light-text-color;
     background-color: $lighter-gray;
     cursor: not-allowed;
 
@@ -311,6 +322,29 @@ $help-text-height: $label-height;
   }
 }
 
+.form-group--select {
+
+  &:before,
+  &:after {
+    content: "";
+    position: relative;
+    border-style: solid;
+    border-width: 0.4rem 0.25rem;
+    border-radius: $border-radius;
+    transition: border-color $transition-duration $smooth-ease;
+  }
+
+  &:before {
+    top: 0.5rem;
+    border-color: $light-text-color transparent transparent transparent;
+  }
+
+  &:after {
+    top: -0.5rem;
+    border-color: transparent transparent $light-text-color transparent;
+  }
+}
+
 .form-group--file .form-group__input {
   margin: -1px 0;
 }
@@ -324,8 +358,4 @@ $help-text-height: $label-height;
 .form-group__file-icon {
   font-size: 4em;
   line-height: 4rem;
-}
-
-.form-group__file-label {
-
 }
