--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -44,7 +44,7 @@ $link-color: $color-secondary;
 
 $base-font-size: 16px;
 
-$font-family: 'Clear Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-family: 'Inter UI var alt', 'Inter UI', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 $h1: normal normal 700 1.875rem/3.5rem $font-family;      // 30px/56px
 $h2: normal normal 400 1.25rem/3rem $font-family;         // 20px/48px
