--- a/src/styles/base/_font.scss
+++ b/src/styles/base/_font.scss
@@ -1,3 +1,5 @@
+@import url('https://rsms.me/inter/inter-ui.css');
+
 @font-face {
   font-family: "Roboto";
   src:url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,900');
