--- a/src/styles/base/_font.scss
+++ b/src/styles/base/_font.scss
@@ -1,48 +1,1 @@
-@import url('https://rsms.me/inter/inter-ui.css');
-
-@font-face {
-  font-family: "Roboto";
-  src:url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,900');
-}
-
-@font-face {
-  font-family: "Clear Sans";
-  src: url("../fonts/ClearSans-Light.woff") format("woff");
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Clear Sans";
-  src: url("../fonts/ClearSans-LightItalic.woff") format("woff");
-  font-weight: 300;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Clear Sans";
-  src: url("../fonts/ClearSans-Regular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Clear Sans";
-  src: url("../fonts/ClearSans-Italic.woff") format("woff");
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Clear Sans";
-  src: url("../fonts/ClearSans-Medium.woff") format("woff");
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Clear Sans";
-  src: url("../fonts/ClearSans-Bold.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-}
+@import url('https://rsms.me/inter/inter.css');
